force-app/main/default/objects/Account/fields/HAM_Because_Hamilton__c.field-meta.xml
<CustomField>
    <fullName>HAM_Because_Hamilton__c</fullName>
    <description>The total amount raised for the Because Hamilton Campaign</description>
    <inlineHelpText>The total amount raised for the Because Hamilton Campaign</inlineHelpText>
    <label>Because Hamilton</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>