force-app/main/default/objects/Account/fields/HAM_CB__c.field-meta.xml
<CustomField>
    <fullName>HAM_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates if an organization or household is part of Chapel Bell</description>
    <label>Chapel Bell</label>
    <type>Checkbox</type>
</CustomField>