force-app/main/default/objects/Account/fields/HAM_Current_Date_Orgs__c.field-meta.xml
<CustomField>
    <fullName>HAM_Current_Date_Orgs__c</fullName>
    <description>Generate Today&apos;s Date on Organization object for use in Ruli to populate anniversary dates.</description>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Generate Today&apos;s Date on Organization object for use in Ruli to populate anniversary dates.</inlineHelpText>
    <label>HAM Current Date Orgs</label>
    <type>Date</type>
</CustomField>