force-app/main/default/objects/Account/fields/HAM_Employer_Engagement_Stage__c.field-meta.xml
<CustomField>
    <fullName>HAM_Employer_Engagement_Stage__c</fullName>
    <label>Employer Engagement Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>