force-app/main/default/objects/Account/fields/HAM_Employer_Engagement_Status__c.field-meta.xml
<CustomField>
    <fullName>HAM_Employer_Engagement_Status__c</fullName>
    <label>Employer Engagement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Highly Engaged</fullName>
            </value>
            <value>
                <fullName>Impact</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>