force-app/main/default/objects/Account/fields/HAM_Foreign_Gift_above_threshold_LY__c.field-meta.xml
<CustomField>
    <fullName>HAM_Foreign_Gift_above_threshold_LY__c</fullName>
    <description>This field is used to flag any foreign gift that are above the threshold the last calendar year (1st Jan to 31st Dec).</description>
    <formula>IF( AND(HAM_Hard_Credit_Last_Calendar_Year__c&gt; 50000, HAM_Is_Foreign_Entity__c ), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used to flag any foreign gift that are above the threshold Last calendar year (1st Jan &apos;24 to 31st Dec &apos;24).
Last Year Value: $50K</inlineHelpText>
    <label>HAM Foreign Gift above threshold LY</label>
    <type>Checkbox</type>
</CustomField>