force-app/main/default/objects/Account/fields/HAM_Is_Anonymous__c.field-meta.xml
<CustomField>
    <fullName>HAM_Is_Anonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used by Monica to mark orgs for Honor roll</description>
    <inlineHelpText>This field will be used by Monica to mark orgs for Honor roll</inlineHelpText>
    <label>HAM Is Anonymous</label>
    <type>Checkbox</type>
</CustomField>