force-app/main/default/objects/Account/fields/HAM_Is_Foreign_Entity__c.field-meta.xml
<CustomField>
    <fullName>HAM_Is_Foreign_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Field is used to support the Foreign Gift Management Policy</description>
    <inlineHelpText>This Field is used to support the Foreign Gift Management Policy</inlineHelpText>
    <label>HAM Is Foreign Entity</label>
    <type>Checkbox</type>
</CustomField>