force-app/main/default/objects/Account/fields/HAM_Last_Year_Hamilton_Fund_Fundraising__c.field-meta.xml
<CustomField>
    <fullName>HAM_Last_Year_Hamilton_Fund_Fundraising__c</fullName>
    <description>The total amount raised for last year&apos;s Hamilton Fund.</description>
    <inlineHelpText>The total amount raised for last year&apos;s Hamilton Fund.</inlineHelpText>
    <label>Last Year Hamilton Fund Fundraising</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>