force-app/main/default/objects/Account/fields/HAM_PeopleGroveCompanyID__c.field-meta.xml
<CustomField>
    <fullName>HAM_PeopleGroveCompanyID__c</fullName>
    <externalId>true</externalId>
    <label>PeopleGrove Company ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>