force-app/main/default/objects/Account/fields/HAM_PRM_Role__c.field-meta.xml
<CustomField>
    <fullName>HAM_PRM_Role__c</fullName>
    <description>Populated via flow, indicates the Role on the current PRM assignment.</description>
    <inlineHelpText>Role on current PRM assignment.</inlineHelpText>
    <label>PRM Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>