force-app/main/default/objects/Account/fields/HAM_Prospect_Stage__c.field-meta.xml
<CustomField>
    <fullName>HAM_Prospect_Stage__c</fullName>
    <label>Prospect Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>