force-app/main/default/objects/Account/fields/Primary_Constituent_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Constituent_Type__c</fullName>
    <formula>ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Primary_Contact_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Constituent Type</label>
    <type>Text</type>
</CustomField>