force-app/main/default/objects/Account/fields/Secondary_Constituent__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Constituent__c</fullName>
    <description>Spouse or Partner</description>
    <formula>ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Preferred_Spouse__r.ucinn_ascendv2__Full_Name_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Constituent</label>
    <type>Text</type>
</CustomField>